# guix-additions

./: 0001-Adapt-command-line-options-for-StrelkaPostProcess.patch  0001-Adding-R-packages-vcfR.patch  0001-htseq-increase-memory-limit.patch  0001-purity-ploidy-estimator-Add-reference-genome-data-fo.patch  0002-Adapt-Cobalt-command-line-options.patch  0003-Use-escaped-tabs-for-the-read-group.patch  0004-Use-bcftools-to-annotate-PON-data.patch  0005-Add-somatic-PON-filtering.patch  0006-Remove-FREEC_SNPFILE-option.patch  0007-Properly-detect-and-run-fragment-mode.patch  Makefile.am  README.md  circos-remove-findbin.patch  configure.ac  delly-use-system-libraries.patch  gatk-apply-area-51-restrictions.patch  gatk-disable-vectorloglesscaching.patch  hmf-pipeline-disable-required-pon.patch  hmf-pipeline-on-slurm.patch  hmf-pipeline-skip-readgroup-validation.patch  hmf-pipeline-v4.8-remove-dsb-filter.patch  htslib-add-cram_to_bam.patch  iap-fix-deprecated-perl-functions.patch  manta-1.1.0-use-system-boost.patch  manta-ignore-too-few-observations.patch  manta-use-system-htslib.patch  manta-use-system-samtools.patch  manta-use-system-zlib.patch  mongodb-add-version-file.patch  mongodb-fix-glibc-error.patch  plink-ng-Makefile-zlib.patch  python-ete2-disable-homecalling.patch  strelka2-unbundle-dependencies.patch  update.sh  virtuoso-ose-increase-maxrows.patch
doc/: Deployment.md  Packaging.md
scripts/: add-pip-package.py  add-pip-package.sh  build-umcu-packages.sh  get-source-tarballs.sh  guixr_bioclite_imports.sh  update.sh
umcu/workflows/: rnaseq.scm
