# Copyright © 2017 Roel Janssen <roel@gnu.org>
#
# This program is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public License
# as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

include guile.am

moddir=$(prefix)/share/guile/site/2.2
godir=$(libdir)/guile/2.2/ccache

SOURCES =                                       \
  umcu/packages/bioconductor.scm                \
  umcu/packages/biodynamics-group.scm           \
  umcu/packages/boost.scm                       \
  umcu/packages/bwa.scm                         \
  umcu/packages/caveman.scm                     \
  umcu/packages/cgp-battenberg.scm              \
  umcu/packages/circos.scm                      \
  umcu/packages/conifer.scm                     \
  umcu/packages/contra.scm                      \
  umcu/packages/databases.scm                   \
  umcu/packages/datasets.scm                    \
  umcu/packages/fast5.scm                       \
  umcu/packages/fastqc.scm                      \
  umcu/packages/freebayes.scm                   \
  umcu/packages/freec.scm                       \
  umcu/packages/gatk.scm                        \
  umcu/packages/genenetwork.scm                 \
  umcu/packages/genomes.scm                     \
  umcu/packages/github.scm                      \
  umcu/packages/grid-engine.scm                 \
  umcu/packages/guix.scm                        \
  umcu/packages/hmf.scm                         \
  umcu/packages/igvtools.scm                    \
  umcu/packages/king.scm                        \
  umcu/packages/manta.scm                       \
  umcu/packages/mongodb.scm                     \
  umcu/packages/mysql.scm                       \
  umcu/packages/nanosvc.scm                     \
  umcu/packages/pathseq.scm                     \
  umcu/packages/pbgzip.scm                      \
  umcu/packages/perl.scm                        \
  umcu/packages/picard.scm                      \
  umcu/packages/pindel.scm                      \
  umcu/packages/plink.scm                       \
  umcu/packages/pyclone.scm                     \
  umcu/packages/pyflow.scm                      \
  umcu/packages/python.scm                      \
  umcu/packages/sambamba.scm                    \
  umcu/packages/samtools.scm                    \
  umcu/packages/snp-fingerprinting.scm          \
  umcu/packages/snpeff.scm                      \
  umcu/packages/star.scm                        \
  umcu/packages/strelka.scm                     \
  umcu/packages/varscan.scm                     \
  umcu/packages/vcf-explorer.scm                \
  umcu/packages/vcflib.scm                      \
  umcu/packages/vcftools.scm                    \
  umcu/packages/vt.scm

EXTRA_DIST += env.in
